# ScaleBalancer

./: .gitignore  CMakeLists.txt  README.md  run-cmake.sh
src/: scaleblancer.cpp
tests/: CMakeLists.txt  integration_tests.cpp  mock_file_io_tests.cpp  unit_tests.cpp
